dev/ingress/fake30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake30-ingress
  namespace: fake30-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake30.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake30-service
                port:
                  number: 20030
